WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232769
[iOS] IPC decoder for ResourceRequest loses systemPreviewInfo when there is platform data
https://bugs.webkit.org/show_bug.cgi?id=232769
Summary
[iOS] IPC decoder for ResourceRequest loses systemPreviewInfo when there is p...
Chris Dumez
Reported
2021-11-05 15:23:02 PDT
The IPC decoder for ResourceRequest decoders systemPreviewInfo and sets it on the ResourceRequest. It then uses different code paths to decode the rest of the ResourceRequest based on whether or not there is underlying platform data. If there is underlying platform data, we call decodePlatformData() which creates a brand-new ResourceRequest, and thus looses the systemPreviewInfo we've just set.
Attachments
Patch
(3.62 KB, patch)
2021-11-05 15:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.62 KB, patch)
2021-11-05 17:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-11-05 15:46:51 PDT
Created
attachment 443448
[details]
Patch
Wenson Hsieh
Comment 2
2021-11-05 16:58:08 PDT
Comment on
attachment 443448
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=443448&action=review
> Source/WebKit/ChangeLog:8 > + The IPC decoder for ResourceRequest decoders systemPreviewInfo and sets it on the ResourceRequest.
Nit - s/decoders/decodes/
> Source/WebKit/ChangeLog:11 > + which creates a brand-new ResourceRequest, and thus looses the systemPreviewInfo we've just set.
Nit - s/looses/loses/
Chris Dumez
Comment 3
2021-11-05 17:11:51 PDT
Created
attachment 443459
[details]
Patch
EWS
Comment 4
2021-11-05 20:03:04 PDT
Committed
r285361
(
243919@main
): <
https://commits.webkit.org/243919@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443459
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-11-05 20:04:18 PDT
<
rdar://problem/85094542
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug